# GameMath

./: .gitignore  CMakeLists.txt  Homework1.c  Homework1.h  LICENSE  data.txt
hw1/: CMakeLists.txt  Homework1.c  hw1.c
hw1/tests/: CMakeLists.txt  test_homework1.cpp
hw3/: hw.c  hw.h  hw.py  hw3.c  hw3.h  hw3.py  main.c
hw4/: hw.c  hw.h  hw4.c  hw4.h  hw4.py
hw5/: hw.cpp  hw.hpp  hw5.cpp  main.cpp
hw6/: hw6.c  hw6.h  main.cpp
hw7/: hw.py
hw8/: hw8.c  hw8.h  main.c  spots.json  voronoi_cosine.ppm  voronoi_euclidean.ppm  voronoi_manhattan.ppm
tests/: test_homework1.cpp
